--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -670,6 +670,8 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="call_record_add_numbers">Aggiungi numeri</string>
     <string name="call_remove_exception_numbers_confirm">%d numeri saranno cancellati.</string>
     <string name="call_record_auto_always">Tutti i numero</string>
+    <string name="call_record_on_summary">Registrazione automatica attivata</string>
+    <string name="call_record_off_summary">Registrazione automatica disattivata</string>
     <string name="autoip">Composizione PI automatica</string>
     <string name="autoip_prefix">Prefisso internazionale</string>
     <string name="autoip_prefix_summary">"Prefisso intenazionale del tuo operatore: %s"</string>
@@ -828,5 +830,39 @@ Riprova o chiama il servizio clienti per altre opzioni."</string>
     <string name="uplmn_list_setting_add_plmn">Nuovo PLMN</string>
     <string name="gsm_umts_network_preferences_title">Modalità rete</string>
     <string name="gsm_umts_network_preferences_dialogtitle">Modalità rete</string>
+    <string name="msim_setting_screen_title">SIM e reti mobili</string>
+    <string name="msim_setting_categery_title">Informazioni SIM</string>
+    <string name="msim_general_setting">Impostazioni comuni</string>
+    <string name="msim_default_setting">Impostazioni predefinite</string>
+    <string name="msim_setting_no_sim_indicator">Nessuna SIM</string>
+    <string name="msim_setting_sim_info_editor_title">Modifica informazioni SIM</string>
+    <string name="msim_setting_operator_network_title">Rete operatore</string>
+    <string name="msim_sim_lock">Bloccata</string>
+    <string name="msim_sim_radio_off">Disattivata</string>
+    <string name="msim_enable_sim">Attivata</string>
+    <string name="msim_info_editor_name">Modifica nome SIM</string>
+    <string name="msim_info_editor_number">MOdifica numero SIM</string>
+    <string name="msim_info_editor_set_name_error">Si è verificato un errore, riprova più tardi</string>
+    <string name="msim_apn_not_set">Non impostato</string>
+    <string name="msim_set_sub_not_supported_phone_in_call">Non puoi impostarlo durante una chiamata</string>
+    <string name="msim_set_sub_not_supported_slot_id_error">Errore SIM, riprova più tardi</string>
+    <string name="msim_mode_progress_activating_message">Attivazione</string>
+    <string name="msim_mode_progress_deactivating_message">Disattivazione</string>
+    <string name="msim_pref_title_voice">Chiamata</string>
+    <string name="msim_pref_title_data">Internet</string>
+    <string name="msim_not_set_summary">Non impsotato</string>
     <string name="select_voice_call_sim">Prego scegliere</string>
+    <string name="general_setting">Impostazioni</string>
+    <string name="call_record_setting">Impostazioni registrazione chiamata</string>
+    <string name="preference_telocation_title">Posizione</string>
+    <string name="cloud_antispam_title">Identifica numeri sconosciuti</string>
+    <string name="preference_auto_ip_summary_disable">Disattivato</string>
+    <string name="preference_dial_pad_touch_tone_title">Toni tastierino</string>
+    <string name="preference_telocation_summary_teloc_off">Nascondi posizione contatto</string>
+    <string name="preference_telocation_summary_teloc_on">Mostra posizione contatto</string>
+    <string name="preference_telocation_summary_countrycode_on">Componi automaticamente il prefisso internazionale</string>
+    <string name="preference_dial_pad_touch_tone_default">Predefinito</string>
+    <string name="preference_dial_pad_touch_tone_piano">Pianoforte</string>
+    <string name="preference_telocation_summary_countrycode_off">Non comporre automaticamente il prefisso internazionale</string>
+    <string name="telephony_setting">Impostazioni di chiamata</string>
 </resources>
