--- a/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
+++ b/Italian/main/XiaomiAccount.apk/res/values-it/strings.xml
@@ -131,8 +131,12 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="user_agreement_p3"> e  </string>
     <string name="user_agreement_p4"><u>Policy sulla privacy</u></string>
     <string name="user_agreement_p5">"Eseguendo l'accesso, dai il consenso a "</string>
-    <string name="user_agreement_p6">"Stai dando il tuo consenso
- a "</string>
+    <string name="user_agreement_p6">"Stai dando il tuo consenso a
+  "</string>
+    <string name="privacy_policy">Accordo sulla Privacy</string>
+    <string name="user_agreement">Accordo Utente</string>
+    <string name="loading">Caricamento…</string>
+    <string name="license_host_unreachable"Impossibile collegarsi alla rete. PEr vedere adesso questa informazione vai su %s."</string>
     <string name="skip_setup_account_title">"Salta l'impostazione dell'account"</string>
     <string name="skip_setup_account_msg">Con il tuo account Xiaomi puoi sincronizzare le tue foto, i tuoi sms, le tue chiamate, le tue note etc. Continuare ed impostarlo più tardi?</string>
     <string name="account_dspt">Un solo account per tutti i servizi Xiaomi</string>
@@ -171,83 +175,6 @@ Puoi utilizzarlo per accedere e recuperare la password."</string>
     <string name="trust_device">Autorizza dispositivo</string>
     <string name="vcode_prompt_long">Inserisci il codice di verifica generato tramite il sistema di sicurezza Xiaomi</string>
     <string name="vcode_notification_title">Il tuo accesso di verifica è incompleto</string>
-    <string name="activate_phone_failed_notif_title">Impossibile attivare la carta SIM</string>
-    <string name="activate_phone_failed_notif_title_msim">Impossibile avviare MiCloud per SIM %s</string>
-    <string name="activate_status_title_activating">Attivazione SIM, attendere prego…</string>
-    <string name="activate_status_title_activating_msim">Attivazione SIM %s…</string>
-    <string name="activate_status_desc_wait_for_phone_service">In attesa del servizio di telefonia</string>
-    <string name="activate_status_desc_registration">Registrazione carta SIM</string>
-    <string name="activate_status_desc_registration_server_error">Errore lato server durante la registrazione della carta SIM</string>
-    <string name="activate_status_desc_query_activation_info">Richiesta info di attivazione al server</string>
-    <string name="activate_status_desc_query_activation_info_no_info">Nessuna info di attivazione sul server</string>
-    <string name="activate_status_desc_query_activation_info_server_error">Errore lato server durante la richiesta diinformazioni di attivazione</string>
-    <string name="activate_status_desc_query_activation_info_downlink_sms_error">Il server non è riuscito ad inviare un SMS di attivazione al tuo telefono</string>
-    <string name="activate_status_desc_wait_for_sms">"In attesa dell'SMS di attivazione dal server"</string>
-    <string name="activate_status_desc_wait_for_sms_success">SMS di attivazione dal server ricevuto</string>
-    <string name="activate_status_desc_wait_for_sms_fail">"Impossibile ricevere l'sms di attivazione dal server"</string>
-    <string name="activate_status_desc_request_activation_sms">Richiesta invio SMS di attivazione dal server al tuo telefono</string>
-    <string name="activate_status_desc_request_activation_sms_server_error">Errore lato server durante la richiesta di invio SMS di attivazione dal server al tuo telefono</string>
-    <string name="activate_status_desc_request_activation_sms_phone_error">Il numero di telefono immesso non è valido</string>
-    <string name="activate_status_desc_getting_gateway">Recupero gateway SMS</string>
-    <string name="activate_status_desc_failed_getting_gateway">Impossibile recuperare gateway SMS</string>
-    <string name="activate_status_desc_prepare_sending_sms">Preparazione invio SMS di attivazione al gateway</string>
-    <string name="activate_status_desc_sending_sms">Invio SMS di attivazione al gateway</string>
-    <string name="activate_status_desc_sending_sms_fail">"Impossibile inviare l'SMS di attivazione al server"</string>    
-    <string name="activate_status_desc_sms_sent">SMS di attivazione inviato correttamente</string>
-    <string name="activate_status_desc_acquire_phone_number">Recupero numero dal server</string>
-     <string name="activate_status_desc_acquire_phone_number_server_error">A server error occurred while acquiring phone number</string>
-    <string name="activate_status_desc_acquire_phone_number_server_no_info">Impossibile ottenere il numero di telefono</string>
-    <string name="activate_status_desc_registering_sim_account">Associazione della carta SIM al tuo account</string>
-    <string name="activate_status_desc_registering_sim_account_server_error">Errore lato server durante la registrazione della carta SIM</string>
-    <string name="activate_status_desc_checking_xiaomi_account">Creazione accounr Mi</string>
-    <string name="activate_status_desc_checking_xiaomi_account_server_error">"Errore lato server durante la verifica dell'account Mi"</string>
-    <string name="activate_status_desc_registering_xiaomi_account">Registrazione account Mi sul server</string>
-    <string name="activate_status_desc_registering_xiaomi_account_server_error">"Errore lato server durante la registrazione dell'account Mi sul server"</string>
-    <string name="activate_status_desc_getting_sim_info">Recupero informazioni sulla carta SIM</string>
-    <string name="activate_status_desc_getting_sim_info_fail">Impossibile ottenere informazioni sulla carta SIM</string>
-    <string name="sim_unactivated_title">La carta SIM non è stata associata</string>
-    <string name="activate_popup_title_manual">Associa carta SIM</string>
-    <string name="activate_popup_desc_sim_card">Verrà inviato un SMS per associare la tua carta SIM al tuo account e abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
-    <string name="activate_popup_desc_intl_sim_card">Verrà inviato un SMS per associare la tua carta SIM al tuo account e abilitare %s. Questo può comportare un costo extra come previsto dal tuo operatore.</string>
-    <string name="activate_popup_desc_mixed_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
-    <string name="activate_popup_desc_2_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore.</string>
-    <string name="activate_popup_desc_2_intl_sim_cards">Verranno inviati 2 SMS di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore.</string>
-    <string name="activate_popup_desc_sim_card_downlink">Per abilitare %s, inserisci il tuo numero di telefono</string>
-    <string name="activate_popup_title_new_sim_card">Rilevata un nuova carta SIM</string>
-    <string name="activate_popup_desc_new_sim_card">"Sembra che tu abbiamo cambiato carta SIM. Verrà inviato un sms di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore."</string>
-    <string name="activate_popup_desc_new_intl_sim_card">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
-    <string name="activate_popup_desc_new_mixed_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
-    <string name="activate_popup_desc_new_2_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo comporta i normali costi previsti dal tuo operatore."</string>
-    <string name="activate_popup_desc_new_2_intl_sim_cards">"Sembra che tu abbiamo cambiato carta SIM. Verranno inviati 2 messaggi di attivazione per abilitare %s. Questo potrebbe comportare costi extra come previsti dal tuo operatore."</string>
-    <string name="activate_popup_desc_new_sim_card_downlink">"Sembra che tu abbiamo cambiato carta SIM. Inserisci il numero di telefono associato alla tua nuova carta SIM per abilitare %s"</string>
-    <string name="activate_popup_title_register_account">Associa carta SIM</string>
-    <string name="activate_popup_desc_register_account">Verrà inviato un SMS per attivare il tuo account MI</string>
-    <string name="activate_popup_desc_register_account_intl">Verrà inviato un SMS internazionale per attivare il tuo account MI</string>
-    <string name="activate_popup_desc_register_account_downlink">Inserisci il tuo numero di telefono</string>
-    <string name="activate_popup_title_failed_send_sms">"Impossibile inviare l'SMS"</string>
-    <string name="activate_popup_desc_failed_send_sms">"Impossibile inviare l'SMS di attivazione. Assicurati che la tua carta SIM sia già attiva."</string>
-    <string name="activate_popup_confirm_failed_send_sms">Riprova</string>
-    <string name="activate_popup_title_failed_query_info">Impossibile trovare il numero</string>
-    <string name="activate_popup_desc_failed_query_info">Impossibile trovare il numero di telefono. Assicurati che la tua carta SIM sia già attiva.</string>
-    <string name="activate_popup_confirm_failed_query_info">Riprova</string>
-    <string name="activate_popup_title_failed_server">Errore lato server</string>
-    <string name="activate_popup_desc_failed_server">Verifica la tua connessione dati e riprova.</string>
-    <string name="activate_popup_confirm_failed_server">Riprova</string>
-    <string name="activate_popup_title_failed_receive_sms">Nessuna risposta</string>
-    <string name="activate_popup_desc_failed_receive_sms">Assicurati che il numero di telefono che hai immesso sia corretto e che la tua carta SIM sia già attiva.</string>
-    <string name="activate_popup_confirm_failed_receive_sms">Riprova</string>
-    <string name="activate_popup_title_failed_phone_error">Numero di telefono non valido</string>
-    <string name="activate_popup_desc_failed_phone_error">Il numero di telefono che hai immesso non è valido.</string>
-    <string name="activate_popup_confirm_failed_phone_error">Riprova</string>
-    <string name="activate_feature_mx">Messaggi gratis tramite cloud</string>
-    <string name="activate_feature_mms_sync">Sincronizzazione SMS</string>
-    <string name="activate_feature_call_log_sync">Sincronizzazione registro chiamate</string>
-    <string name="activate_feature_find_device">Trova dispositivo</string>
-    <string name="activate_desc_sim_card">Verrà inviato un SMS per attivare la tua carta SIM</string>
-    <string name="activate_desc_intl_sim_card">Verrà inviato un SMS internazionale per attivare la tua carta SIM</string>
-    <string name="activate_desc_mixed_sim_cards">Verranno inviati un SMS norale e un SMS internazionale per attivare le due carte SIM</string>
-    <string name="activate_desc_2_sim_cards">Verranno inviati 2 SMS per attivare le carte SIM</string>
-    <string name="activate_desc_2_intl_sim_cards">Verranno inviati 2 SMS internazionali per attivare le carte SIM</string>
     <string name="checking_input">Verifica dati immessi…</string>
     <string name="wipe_data_dialog_title">"Alcuni contenuti non sono stati sincronizzati"</string>
     <string name="wipe_data_dialog_msg">%s contenuti saranno persi se prosegui.</string>
