--- a/Italian/device/cancro/Cit.apk/res/values-it/strings.xml
+++ b/Italian/device/cancro/Cit.apk/res/values-it/strings.xml
@@ -64,19 +64,7 @@
     <string name="cit_tool_nfc_st_confreq">freq:</string>
     <string name="cit_tool_nfc_st_run">Run</string>
     <string name="cit_tool_nfc_st_stop">Stop</string>
-    <string name="cit_tool_wifi_band_24">band: 2.4G</string>
-    <string name="cit_tool_wifi_band_5">band: 5G</string>
-    <string name="cit_tool_wifi_band_change">Next</string>
-    <string name="cit_tool_wifi_rx_dut_ip">192.168.1.12</string>
-    <string name="cit_tool_wifi_rxbg_test">Rx:B/G</string>
-    <string name="cit_tool_wifi_rxbg_test_channel">chan:</string>
-    <string name="cit_tool_wifi_rxbg_test_datarate">rate:</string>
-    <string name="cit_tool_wifi_rxn_test">Rx:N</string>
-    <string name="cit_tool_wifi_rxn_test_channel">chan:</string>
-    <string name="cit_tool_wifi_rxn_test_mcs">MCS:</string>
-    <string name="cit_tool_wifi_tx_n_bandwidth">bandwidth:</string>
-    <string name="cit_tool_wifi_tx_st">Tx: ST</string>
-    <string name="cit_tool_wifi_tx_st_chan">channel:</string>
+    <string name="cit_tool_cal_camera">Camera Calibration Tool</string>
     <string name="cit_touch_calib_title">Touch Calibration</string>
     <string name="cit_touch_calib_summary">Next step will do touch calibration, press confirm button and do not touch screen after it, wait for calibration success hint</string>
     <string name="cit_touch_calib_pass">Touch Calibration pass, Please use it normally</string>
@@ -145,6 +133,11 @@ Hold the phone as if you are making a call, Speak to main microphone, you should
 2.Tap the shutter button
 3.Tap the Check icon. The system will save the photo automatically.
 4.The photo you took should be displayed below. Tap Delete to complete the test."</string>
+    <string name="cit_camera_calibration_summary">"Test instructions:
+
+1.Tap the calibration button below to enter Camera interface
+2.Press Back button to exit the camera interface
+3.There will be a calibration pass label to indicate the ois has been calibrated"</string>
     <string name="cit_camera_sdcard_error">"Can't take photo. SD card is full."</string>
     <string name="cit_gps_check_summary">The corresponding GPS info should be displayed below.</string>
     <string name="cit_fm_check_summary">"This will test the device's FM function."</string>
@@ -294,49 +287,29 @@ Touch the screen to start GPS…"</string>
     <string name="cit_tool_wifi_tx_bg_txpr">txpower:</string>
     <string name="cit_tool_wifi_tx_bg_txrt">datarate:</string>
     <string name="cit_tool_wifi_tx_n">Tx:N</string>
+    <string name="cit_tool_wifi_tx_ac">Tx: ac</string>
+    <string name="cit_tool_wifi_tx_st">Tx: ST</string>
     <string name="cit_tool_wifi_tx_n_chan">channel:</string>
     <string name="cit_tool_wifi_tx_n_txpr">txpower:</string>
     <string name="cit_tool_wifi_tx_n_txrt">datarate: MCS</string>
-    <string name="cit_tool_wifi_b_1a">Tx:1/1M/15dBm</string>
-    <string name="cit_tool_wifi_b_1b">Tx:1/11M/15dBm</string>
-    <string name="cit_tool_wifi_b_13a">Tx:13/1M/15dBm</string>
-    <string name="cit_tool_wifi_b_13b">Tx:13/11M/15dBm</string>
-    <string name="cit_tool_wifi_g_1a">Tx:1/6M/13dBm</string>
-    <string name="cit_tool_wifi_g_1b">Tx:1/54M/13dBm</string>
-    <string name="cit_tool_wifi_g_13a">Tx:13/6M/13dBm</string>
-    <string name="cit_tool_wifi_g_13b">Tx:13/54M/13dBm</string>
-    <string name="cit_tool_wifi_n_1a">Tx:1/MCS0/11dBm</string>
-    <string name="cit_tool_wifi_n_1b">Tx:1/MCS7/11dBm</string>
-    <string name="cit_tool_wifi_n_13a">Tx:13/MCS0/11dBm</string>
-    <string name="cit_tool_wifi_n_13b">Tx:13/MCS7/11dBm</string>
-    <string name="cit_tool_wifi_5g_36a">Tx:36/6M/13dBm</string>
-    <string name="cit_tool_wifi_5g_36b">Tx:36/54M/13dBm</string>
-    <string name="cit_tool_wifi_5g_36c">Tx:36/MCS0/13dBm</string>
-    <string name="cit_tool_wifi_5g_36d">Tx:36/MCS7/13dBm</string>
-    <string name="cit_tool_wifi_5g_100a">Tx:100/6M/13dBm</string>
-    <string name="cit_tool_wifi_5g_100b">Tx:100/54M/13dBm</string>
-    <string name="cit_tool_wifi_5g_100c">Tx:100/MCS0/13dBm</string>
-    <string name="cit_tool_wifi_5g_100d">Tx:100/MCS7/13dBm</string>
-    <string name="cit_tool_wifi_5g_165a">Tx:165/6M/13dBm</string>
-    <string name="cit_tool_wifi_5g_165b">Tx:165/54M/13dBm</string>
-    <string name="cit_tool_wifi_5g_165c">Tx:165/MCS0/13dBm</string>
-    <string name="cit_tool_wifi_5g_165d">Tx:165/MCS7/13dBm</string>
-    <string name="cit_tool_wifi_rx_1">Rx:1</string>
-    <string name="cit_tool_wifi_rx_7">Rx:7</string>
-    <string name="cit_tool_wifi_rx_13">Rx:13</string>
-    <string name="cit_tool_wifi_rx_36">Rx:36</string>
-    <string name="cit_tool_wifi_rx_100">Rx:100</string>
-    <string name="cit_tool_wifi_rx_165">Rx:165</string>
+    <string name="cit_tool_wifi_txrx_chain_selection">Select antenna</string>
+    <string name="cit_tool_wifi_chain_1">1</string>
+    <string name="cit_tool_wifi_chain_2">2</string>
+    <string name="cit_tool_wifi_chain_1_2">1+2</string>
     <string name="cit_tool_wifi_rx_ap">Rx:AP</string>
     <string name="cit_tool_wifi_rx_exit">Rx:exit</string>
     <string name="cit_tool_wifi_rx_run">Avvia</string>
     <string name="cit_tool_wifi_rx_stop">Interrompi</string>
-    <string name="cit_tool_wifi_rx_total_format">Trasferiti: %s</string>
     <string name="cit_tool_wifi_rx_error">An error has occurred</string>
     <string name="cit_tool_wifi_rx_count_error">An error occurred while running the program</string>
     <string name="cit_tool_wifi_rx_ap_name">Nome punto di accesso</string>
-    <string name="cit_tool_wifi_rx_ap_type">Tipo punto di accesso</string>
-    <string name="cit_tool_wifi_rx_ap_type_error">Errore punto di accesso, reinserisci dettagli bss / adhoc</string>
-    <string name="cit_tool_wifi_rx_ap_not_null">Il nome del punto di accesso non può essere vuoto</string>
     <string name="cit_tool_wifi_exit">Esci</string>
+    <string name="cit_tool_wifi_rx_dut_ip">192.168.1.12</string>
+    <string name="cit_tool_wifi_rxbg_test">Rx: a/b/g</string>
+    <string name="cit_tool_wifi_rxbg_test_channel">channel:</string>
+    <string name="cit_tool_wifi_rxn_test">Rx: n</string>
+    <string name="cit_tool_wifi_rxn_test_channel">channel:</string>
+    <string name="cit_tool_wifi_rxn_test_bw">bandwidth:</string>
+    <string name="cit_tool_wifi_tx_n_bandwidth">bandwidth:</string>
+    <string name="cit_tool_wifi_tx_st_chan">channel:</string>
 </resources>
