--- a/Italian/main/MiBand.apk/res/values-it/strings.xml
+++ b/Italian/main/MiBand.apk/res/values-it/strings.xml
@@ -150,7 +150,7 @@ E' necessario Android 4.4 o superiore. "</string>
     <string name="share_goal_tips_fail">"Obiettivo mancato di poco, serve un po' più d'esercizio"</string>
     <string name="person_info_goal_info">"Secondo l'organizzazione mondiale della sanità, dovresti esercitarti in moderatamente per 40 minuti, equivalenti a circa 8,000 passi"</string>
     <string name="person_info_goal_info_young">"Secondo l'organizzazione mondiale della sanità, dovresti esercitarti in moderatamente per 60 minuti, equivalenti a circa 12,000 passi"</string>
-    <string name="set_person_goal">Impostazioni Obiettivo</string>
+    <string name="set_person_goal">"Imposta l'obiettivo"</string>
     <string name="feedback">Feedback</string>
     <string name="smart_wake_up">Risveglio intelligente</string>
     <string name="smart_wake_up_info">"Consenti alla sveglia di svegliarmi 30 minuti in anticipo sull'orario programmato.
@@ -181,12 +181,12 @@ Uscendo perderai i dati non sincronizzati. Procedere all'uscita?"</string>
     <string name="stat_steps_achievement">Percentuale di completamento</string>
     <string name="stat_step_total">Passi in totale</string>
     <string name="stat_step_distance_total">Totale distanza</string>
-    <string name="stat_step_calorie_total">bruciate</string>
+    <string name="stat_step_calorie_total">Bruciate</string>
     <string name="stat_step_walk">Tempo in cammino</string>
     <string name="stat_step_run">Tempo in corsa</string>
     <string name="stat_step_daily">Passi giornalieri</string>
     <string name="stat_step_distance_daily">Distanza giornaliera</string>
-    <string name="stat_step_calorie_daily">bruciate</string>
+    <string name="stat_step_calorie_daily">Bruciate</string>
     <string name="stat_step_active_total">Totale eventi</string>
     <string name="stat_step_walk_total">Totale camminato</string>
     <string name="stat_step_run_total">Totale corso</string>
@@ -284,7 +284,7 @@ Da Lunedì a Domenica, dalle 8:00 alle 18:00"</string>
     <string name="dynamic_detail_step_title">Dati diurni %s</string>
     <string name="dynamic_detail_step_share_title">%s Eventi</string>
     <string name="dynamic_detail_step_title_today">Dati raccolti giornalieri</string>
-    <string name="dynamic_sleep_deep">Sonno Profondo</string>
+    <string name="dynamic_sleep_deep">Sonno profondo</string>
     <string name="dynamic_sleep_shallow">Sonno leggero</string>
     <string name="dynamic_sleep_active">Sveglio</string>
     <string name="dynamic_sleep_active_start">Pronto per dormire</string>
@@ -309,14 +309,14 @@ Da Lunedì a Domenica, dalle 8:00 alle 18:00"</string>
     <string name="start_weixin_not_installed">WeChat non è installato</string>
     <string name="action_pop_about">Info</string>
     <string name="find_bracelet">Trova MiBand</string>
-    <string name="light_color">Colore del LED</string>
-    <string name="light_color_title">Imposta colore per il progresso</string>
-    <string name="wear_hand">Mano che indossa MiBand</string>
-    <string name="left_hand">Sinistra</string>
-    <string name="right_hand">Destra</string>
-    <string name="unbind">Non associato</string>
+    <string name="light_color">Colore LED</string>
+    <string name="light_color_title">Imposta il colore dei LED</string>
+    <string name="wear_hand">Polso utilizzato per MiBand</string>
+    <string name="left_hand">Sinistro</string>
+    <string name="right_hand">Destro</string>
+    <string name="unbind">Scollega MiBand</string>
     <string name="unbind_short">Scollegamento</string>
-    <string name="firmware_version">Versione Firmware</string>
+    <string name="firmware_version">Versione firmware</string>
     <string name="step_per_day">Passi al giorno</string>
     <string name="remain_days_format">"L'ultima ricarica risale a %s giorni fa"</string>
     <string name="remain_days_today_format">"Meno di un giorno dall'ultima carica"</string>
@@ -402,17 +402,17 @@ Media di sonno %5$s, Media sveglio %6$s"</string>
     <string name="unlock_screen_set_success">Hai impostato correttamente lo sblocco tramite MiBand</string>
     <string name="unlock_screen_modify_unlock">"Per modificare
 apri Impostazioni -> Sicurezza e Privacy -> Sicurezza schermo"</string>
-    <string name="bind_weixin_title">"dopo aver cliccato su \"connetti a Wechat\" sarà creato un codice QR nel tuo album, scansiona il codice QR in WeChat e quindi potrai connetterti "</string>
+    <string name="bind_weixin_title">"Dopo aver cliccato su \"connetti a Wechat\" sarà creato un codice QR nel tuo album, scansiona il codice QR in WeChat e quindi potrai connetterti "</string>
     <string name="step1">Passo 1) </string>
     <string name="step2">Passo 2) </string>
-    <string name="bind_weixin_tips_1">Tocca Crea QR code, crea e salva il QR code nella Galleria.</string>
-    <string name="bind_weixin_tips_2">Tocca Apri Wechat, seleziona Scansiona QR code e tocca Album per selezionare il QR code salvato.</string>
+    <string name="bind_weixin_tips_1">Tocca Crea QR code e salva nella Galleria.</string>
+    <string name="bind_weixin_tips_2">"Tocca Apri Wechat, poi Scansiona QR code e seleziona l'immagine dall'Album."</string>
     <string name="bind_weixin_now">Sto generando il QR-Code, attendi…</string>
     <string name="bind_weixin_failed">Associazione fallita, riprova!</string>
     <string name="bind_weixin_succ">Associazione completata, puoi usare WeChat</string>
     <string name="bind_weixin_save">"Salvato nell'album:"</string>
     <string name="incoming_call_notify">Notifica le chiamate in arrivo</string>
-    <string name="incoming_call_notify_tips">Notifica le chiamate perse ogni 20 secondi</string>
+    <string name="incoming_call_notify_tips">"Imposta l'intervallo di notifica"</string>
     <string name="share_step_walk">ho camminato</string>
     <string name="one_week">"Questa settimana "</string>
     <string name="walked">camminato</string>
@@ -500,7 +500,7 @@ Non ti fermare, continua così!"</string>
     <string name="month">Mese</string>
     <string name="year">Anno</string>
     <string name="find_bracelet_warning">La ricerca di MiBand comporta un alto consumo di batteria.</string>
-    <string name="second">Secondo</string>
+    <string name="second">Secondi</string>
     <string name="move_and_capture">Sposta e cattura</string>
     <string name="share_miliao_too_old">Versione di MiTalk troppo vecchia.</string>
     <string name="first_use_days_today_format">Meno di un giorno dal primo utilizzo.</string>
